<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.omgtu.calculator.MainActivity">

    <AutoCompleteTextView
        android:id="@+id/result"
        android:layout_width="365dp"
        android:layout_height="121dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorResult"
        android:backgroundTintMode="screen"
        android:editable="false"
        android:gravity="bottom"
        android:hint="@string/number0"
        android:lineSpacingExtra="8sp"
        android:maxLines="2"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TableLayout
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionSin"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonCos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionCos"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSqr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionSqr"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonBS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionDel"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result"
                app:layout_constraintVertical_bias="0.0" />
        </TableRow>

        <TableRow
            android:id="@+id/functionRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSqrt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionSqrt"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonOP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionOP"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionCP"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionClr"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/digitRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number7"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="220dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number8"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="220dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number9"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="220dp" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionMul"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/digitRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number4"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="156dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number5"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="156dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number6"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="156dp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionDiv"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/digitRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number1"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number2"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number3"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="88dp" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionMin"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/functionRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/number0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionDot"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="="
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorButton"
                android:text="@string/functionPlus"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>
